# audio-command-bridge

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile.workspace  devcontainer.json  docker-compose.devcontainer.yaml
Notes/: Library Selection.md  Links.md  Milestones.md  README.md  Service Architecture.md  Setup.md
migrations/: 20230111235913_create_db.sql
src/: main.rs  schema.rs
